# asterism

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: evidencepack-v1alpha1.md  overview-and-next-steps.md
docs/dogfood/: 2026-06-21-asterism-self-pack.md
docs/pilots/: jaxstro-science-repo-pilot.md
docs/plans/: 2026-06-21-asterism-mvp-design.md  2026-06-21-asterism-mvp.md
examples/: evidencepack-v1alpha1.json
src/asterism/: __init__.py  audit.py  cli.py  evidence.py  extractors.py  packer.py  provenance.py  render.py  retrieve.py  search.py
tests/: test_audit.py  test_cli.py  test_evidence.py  test_extractors.py  test_packer.py  test_render.py  test_retrieve.py  test_search.py
